fixed tab alignment & updated colors

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -441,13 +441,12 @@ button:focus {
   @include outer-container;
   @include span-columns(12);
   margin-top: 35px;
+  margin-bottom: 35px;
 }
 .box-1,
 .box-2,
 .box-3,
 .box-4 {
-
-  // display: inline-block;
   white-space: nowrap;
   border: solid 1px #ccc;
   background-color: $secondary-color;
@@ -707,6 +706,8 @@ p.lower-titles {
   border: 1px solid #ccc;
   background-color: white;
   border-bottom: none;
+  color: $primary-accent-color;
+  font-weight: bold;
 }
 .month-selector {
   float: right;
@@ -864,11 +865,7 @@ ul {
   display: block;
   margin-left: auto;
   margin-right: auto;
-
-
 }
-
-
 
 .bootstrap-select,
 .btn:focus,
@@ -915,19 +912,22 @@ a {
   font-size: 1.2em;
 }
 
+.span-header {
+  width: 50%;
+}
+
 .time-log-month {
   font-weight: bold;
   font-size: 1.5em;
   @include shift(1);
-  @include span-columns(2 of 12);
 }
 
 .time-log-month-total-1,
 .time-log-month-total-2 {
   font-weight: bold;
   font-size: 1.5em;
-  @include shift(7);
-  @include span-columns(2 of 12);
+  float: right;
+  padding-right: 8%;
 }
 
 .time-log-header{
@@ -951,4 +951,8 @@ i.fa.fa-times-circle {
 
 .tab-content {
   display: none;
+}
+
+.bigger-width {
+  width: 66% !important;
 }
